# Graduator

./: .gitignore  CMakeLists.txt  config.json  res.qrc
gauges/: М-3ВУКс-1,6.cfm  М-3ВУКс-1.cfm  М-3ВУКс-10.cfm  М-3ВУКс-100.cfm  М-3ВУКс-16.cfm  М-3ВУКс-160.cfm  М-3ВУКс-2,5.cfm  М-3ВУКс-25.cfm  М-3ВУКс-250.cfm  М-3ВУКс-4.cfm  М-3ВУКс-40.cfm  М-3ВУКс-400.cfm  М-3ВУКс-6.cfm  М-3ВУКс-60.cfm  М-3ВУКс-600.cfm  М-4ВУКс-1.6.cfm  М-4ВУКс-1.cfm  М-4ВУКс-10.cfm  М-4ВУКс-100.cfm  М-4ВУКс-16.cfm  М-4ВУКс-160.cfm  М-4ВУКс-2,5.cfm  М-4ВУКс-25.cfm  М-4ВУКс-250.cfm  М-4ВУКс-4.cfm  М-4ВУКс-40.cfm  М-4ВУКс-400.cfm  М-4ВУКс-6.cfm  М-4ВУКс-60.cfm  М-4ВУКс-600.cfm  М3ВУ-1,6.cfm  М3ВУ-1.cfm  М3ВУ-10.cfm  М3ВУ-100.cfm  М3ВУ-16.cfm  М3ВУ-160.cfm  М3ВУ-25.cfm  М3ВУ-250.cfm  М3ВУ-4.cfm  М3ВУ-40.cfm  (+104 more)
src/: ApplicationBuilder.cpp  ApplicationBuilder.h  defines.h  main.cpp
src/core/services/: ConfigManager.cpp  ConfigManager.h  GaugeCatalog.cpp  GaugeCatalog.h  Logger.cpp  Logger.h  PartyManager.cpp  PartyManager.h  PressureSensor.cpp  PressureSensor.h  ServiceLocator.cpp  ServiceLocator.h  TelemetryLogger.cpp  TelemetryLogger.h  UserDialogService.cpp  UserDialogService.h
src/core/services/cameraProcessor/: Camera.cpp  Camera.h  CameraProcessor.cpp  CameraProcessor.h  CameraSettings.cpp  CameraSettings.h
src/core/services/cameraProcessor/anglemeter/: AnglemeterProcessor.cpp  AnglemeterProcessor.h  cast_anglemeter.cpp  cast_anglemeter.h
src/core/services/cameraProcessor/anglemeters/: scan_anglemeter.cpp  scan_anglemeter.h
src/core/services/cameraProcessor/dshow/: FrameGrabberCB.cpp  FrameGrabberCB.h  QEDIT.H  VideoCaptureProcessor.cpp  VideoCaptureProcessor.h
src/core/services/cameraProcessor/dshow/image/: RGBImage.cpp  RGBImage.h
src/core/services/graduationService/: BatchGraduator.cpp  BatchGraduator.h  GraduationObserver.cpp  GraduationObserver.h  GraduationService.cpp  GraduationService.h  Graduator.cpp  Graduator.h  PressureAngleGraduator.cpp  PressureAngleGraduator.h
src/core/services/pressureController/: G540Driver.cpp  G540Driver.h  LPTDriver.cpp  PressureController.cpp  PressureController.h  PressureControllerBase.cpp  PressureControllerBase.h
src/core/services/pressureController/drivers/: G540Driver.h  LPTDriver.cpp  LPTDriver.h
src/core/services/pressureController/impl/: PressureControllerStand4.cpp  PressureControllerStand4.h  PressureControllerStand5.cpp  PressureControllerStand5.h  utils.cpp  utils.h
src/core/services/stubs/: PressureSensor.cpp  PressureSensorStub.cpp  VideoCaptureProcessor.cpp  cast_anglemeter.cpp
src/core/types/: Displacement.h  GaugeModel.h  Grad.h  PartyResult.cpp  PartyResult.h  Pressure.h  PressureUnit.h  Printer.h
src/core/utils/: Derivator.cpp  Derivator.h  Mediator.cpp  Mediator.h
src/gui/dialogs/: PartyResultDialog.cpp  PartyResultDialog.h
src/gui/models/: GraduationTableModel.cpp  GraduationTableModel.h  PartyHistoryModel.cpp  PartyHistoryModel.h  StatusBarModel.cpp  StatusBarModel.h
src/gui/views/: StatusBarView.cpp  StatusBarView.h
src/gui/widgets/: CameraSettingsTab.cpp  CameraSettingsTab.h  GraduationTableWidget.cpp  GraduationTableWidget.h  LogAndConfigTab.cpp  LogAndConfigTab.h  MainWidget.cpp  MainWidget.h  SettingsWidget.cpp  SettingsWidget.h
src/gui/widgets/cameraGrid/: AspectRatioLabel.cpp  AspectRatioLabel.h  CameraGridWidget.cpp  CameraGridWidget.h
src/gui/widgets/control/: AutomaticWidget.cpp  AutomaticWidget.h  ControlWidget.cpp  ControlWidget.h  ManualWidget.cpp  ManualWidget.h  PartyWidget.cpp  PartyWidget.h
src/gui/widgets/history/: PartyHistoryWidget.cpp  PartyHistoryWidget.h
src/gui/widgets/notifications/: NotificationArea.cpp  NotificationArea.h  NotificationWidget.cpp  NotificationWidget.h
src/gui/widgets/other/: Toast.cpp  Toast.h
src/gui/windows/: MainWindow.cpp  MainWindow.h
styles/: style.qss
translations/: ru_RU.qm  ru_RU.ts
